# vjled

./: .gitattributes  .gitignore  index.html  led-mapping.html  output.html  package-lock.json  package.json  vite.config.ts
docs/: app.md  audio.md  plan.md  python.md
scripts/: analyze_music.mjs  fetch-models.mjs
src/: defaults.ts  led-mapping.tsx  main.tsx  output.tsx  project.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: DISCOGS_EFFNET_ONNX_USAGE.md  README.md  discogs-effnet-bsdynamic-1.json  discogs-effnet-bsdynamic-1.onnx
src-tauri/scripts/: prepare-cef-appimage.sh
src-tauri/src/: audio.rs  genre.rs  lib.rs  link.rs  main.rs  video_server.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/calibration/: mod.rs
src-tauri/src/led/: controllers.rs  layout.rs  mod.rs  protocol.rs
src/components/: LedPanel.tsx
src/events/: vjEvents.ts
src/hooks/: useAudioAnalysis.ts  useEngine.ts
src/led/: camera.ts  commands.ts  gpuPixelSampler.ts  mapping.ts  pixelExtractor.ts
src/renderers/: compositor.ts  index.ts  types.ts  visualValidation.ts  webgl.ts
src/renderers/glsl/: GLSLRenderer.ts
src/renderers/p5/: P5Renderer.ts
src/renderers/threejs/: ThreeJSRenderer.ts
src/renderers/video/: VideoRenderer.ts
src/stores/: aiStore.ts  ledStore.ts  vjStore.ts
src/types/: index.ts
src/windows/control/: ControlApp.tsx  control.css  tauriClient.ts
src/windows/led-mapping/: LedMappingApp.tsx
src/windows/output/: OutputApp.tsx
stitch_vj_ui/: DESIGN.md  code.html
