[package]
name = "vjled-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vjled_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
cef = ["tauri/cef"]

[dependencies]
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
rustfft = "6"
aubio = { version = "0.2.1", features = ["bindgen"] }
crossbeam = "0.8.4"
tract-onnx = "0.21"
ort = "2.0.0-rc.12"
anyhow = "1"
if-addrs = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
tauri = { version = "2", default-features = false, features = [
  "cef",
  "protocol-asset",
  "compression",
  "dynamic-acl",
] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tauri = { version = "2", default-features = false, features = ["cef",
  "wry",
  "protocol-asset",
  "compression",
  "dynamic-acl",
] }

# CEF: tauri の feat/cef ブランチを使用して WebKit を Chromium に置き換える
[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "0e5b4b713e75a423f3d32b704d67e289fb249a39" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "0e5b4b713e75a423f3d32b704d67e289fb249a39" }
tauri-macros = { git = "https://github.com/tauri-apps/tauri", rev = "0e5b4b713e75a423f3d32b704d67e289fb249a39" }
tauri-runtime = { git = "https://github.com/tauri-apps/tauri", rev = "0e5b4b713e75a423f3d32b704d67e289fb249a39" }
tauri-utils = { git = "https://github.com/tauri-apps/tauri", rev = "0e5b4b713e75a423f3d32b704d67e289fb249a39" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", rev = "0e5b4b713e75a423f3d32b704d67e289fb249a39" }
